<resources>
    <string name="app_name">442projects-the-big-brain-bros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="search">Search</string>
    <string name="search_hint">Enter ingredients...</string>

    <string name="app_label" />
    <string name="login">Log In</string>
    <string name="Favorites">Favorites</string>
    <string name="Historyt">History</string>
    <string name="Search">Search</string>
    <string name="settings">Settings</string>
    <string name="signupnow">Not a member yet? Sign up now!</string>
    <string name="logout">Log Out</string>
    <string name="loginpageRegister">Not registered yet? REGISTER HERE.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_address">EmailAddress</string>
    <string name="emailaddress">Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="save">Save</string>
    <string name="ingredients">Ingredients:</string>
    <string name="directions">Directions:</string>
    <string name="registration_here">Registration Here</string>
</resources>
