<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/login_layout"
    android:background="@drawable/good_morning_img">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_person_white_24dp"
                tools:ignore="ContentDescription" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmailAddress"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:textColorHint="#fff"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_Password"
                android:drawablePadding="12dp"
                android:padding="12dp"
                android:hint="@string/password"
                android:textColorHint="#fff"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/remember_me"
                android:textColor="#fff"
                />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:clickable="true"
                android:textSize="18sp"
                android:textColor="#000"
                android:padding="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="32dp"
                android:focusable="true" />

            <Button
                android:id="@+id/signupbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="normal"
                android:textSize="18sp"
                android:padding="16dp"
                android:clickable="true"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="16dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/registerbutton"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/loginpageRegister"
                android:textColor="#fff"
                android:focusable="true" />


</LinearLayout>