<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/registerlayout"
    android:background="@drawable/good_night_img">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/name"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:drawablePadding="12dp"
        android:hint="@string/your_name"
        android:textColorHint="#fff"
        android:drawableLeft="@android:drawable/ic_menu_info_details"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTextUsername"
        android:background="@android:color/transparent"
        android:padding="18dp"
        android:drawablePadding="12dp"
        android:hint="@string/username"
        android:textColorHint="#fff"
        android:drawableLeft="@drawable/ic_person_white_24dp"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmailAddress"
        android:background="@android:color/transparent"
        android:padding="12dp"
        android:drawablePadding="12dp"
        android:hint="@string/emailaddress"
        android:textColorHint="#fff"
        tools:ignore="Autofill"
        android:drawableLeft="@android:drawable/ic_dialog_email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText_Password"
        android:drawablePadding="12dp"
        android:padding="18dp"
        android:hint="@string/password"
        android:textColorHint="#fff"
        android:background="@android:color/transparent"
        android:maxLines="1"
        android:layout_marginTop="4dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        tools:ignore="Autofill" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f9d7db" />



    <Button
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textStyle="normal"
        android:textSize="18sp"
        android:padding="16dp"
        android:clickable="true"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="16dp"
        android:focusable="true" />




</LinearLayout>